<resources>
    <string name="app_name">Valorant Companion App</string>
    <string name="login_welcome">Welcome!</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="reg_register">Register!</string>
    <string name="reg_riotid">RiotId: (e.g. ValorantUser123)</string>
    <string name="reg_tagline">Tagline: (e.g. #1234)</string>
    <string-array name="ranks">
        <item>Rank</item>
        <item>Unranked</item>
        <item>Iron 1</item>
        <item>Iron 2</item>
        <item>Iron 3</item>
        <item>Bronze 1</item>
        <item>Bronze 2</item>
        <item>Bronze 3</item>
        <item>Silver 1</item>
        <item>Silver 2</item>
        <item>Silver 3</item>
        <item>Gold 1</item>
        <item>Gold 2</item>
        <item>Gold 3</item>
        <item>Platinum 1</item>
        <item>Platinum 2</item>
        <item>Platinum 3</item>
        <item>Diamond 1</item>
        <item>Diamond 2</item>
        <item>Diamond 3</item>
        <item>Immortal</item>
        <item>Radiant</item>
    </string-array>
    <string-array name="regions">
        <item>Region</item>
        <item>SEA</item>
        <item>EMEA</item>
        <item>NA</item>
        <item>OCEANIA</item>
    </string-array>
    <string-array name="agents">
        <item>Agent</item>
        <item>Brimstone</item>
        <item>Phoenix</item>
        <item>Sage</item>
        <item>Sova</item>
        <item>Viper</item>
        <item>Cypher</item>
        <item>Reyna</item>
        <item>Killjoy</item>
        <item>Breach</item>
        <item>Omen</item>
        <item>Jett</item>
        <item>Raze</item>
        <item>Skye</item>
        <item>Yoru</item>
        <item>Astra</item>
        <item>Kay/o</item>
    </string-array>
    <string-array name="matches">
        <item>Match Type</item>
        <item>Unrated</item>
        <item>Competitive</item>
        <item>Spike Rush</item>
        <item>Deathmatch</item>
        <item>Escalation</item>
        <item>Replication</item>
        <item>Snowball Fight</item>
    </string-array>
    <string-array name="match_results">
        <item>Match Result</item>
        <item>WIN</item>
        <item>LOSE</item>
        <item>DRAW</item>
    </string-array>
    <string name="icon_desc">Valorant Icon</string>
    <string name="match_see"><u>See Details</u></string>
    <string name="astra_desc">Ghanaian Agent Astra harnesses the energies of the cosmos to reshape battlefields to her whim. With full command of her astral form and a talent for deep strategic foresight, she\'\s always eons ahead of her enemy\'\s next move.</string>
    <string name="astra_ability1">ACTIVATE a Star to form a Gravity Well. Players in the area are pulled toward the center before it explodes, making all players still trapped inside vulnerable.</string>
    <string name="astra_ability2">ACTIVATE a Star to detonate a Nova Pulse. The Nova Pulse charges briefly then strikes, concussing all players in its area.</string>
    <string name="astra_ability3">ACTIVATE a Star to transform it into a Nebula (smoke). USE a Star to Dissipate it, returning the Star to be placed in a new location after a delay. Dissipate briefly forms a fake Nebula at the Star’s location before returning.</string>
    <string name="astra_ability4">ACTIVATE to enter Astral Form where you can place Stars with PRIMARY FIRE. Stars can be reactivated later, transforming them into a Nova Pulse, Nebula, or Gravity Well.</string>
    <string name="astra_ult">When Cosmic Divide is charged, use SECONDARY FIRE in Astral Form to begin aiming it, then PRIMARY FIRE to select two locations. An infinite Cosmic Divide connects the two points you select. Cosmic Divide blocks bullets and heavily dampens audio.</string>
    <string name="astra_tip1">Use Astra’s smokes. You can pick them up to fake smoke and spam after it dissipates.</string>
    <string name="astra_tip2">Enemies cannot hear you tap spike when you are behind the wall, so you can stick the defuse if you start it behind the wall</string>
    <string name="astra_tip3">You can combo your Astra pull with your teammates\'\ skills like Sova\'\s dart, Raze\'\s grenade and Killjoy\'\s molly.</string>
    <string name="breach_desc">Breach, the bionic Swede, fires powerful, targeted kinetic blasts to aggressively clear a path through enemy ground. The damage and disruption he inflicts ensures no fight is ever fair.</string>
    <string name="breach_ability1">EQUIP a fusion charge. FIRE the charge to set a slow-acting burst through the wall. The burst does heavy damage to anyone caught in its area.</string>
    <string name="breach_ability2">EQUIP a blinding charge. FIRE the charge to set a fast-acting burst through the wall. The charge detonates to blind all players looking at it.</string>
    <string name="breach_ability3">EQUIP a seismic blast. HOLD FIRE to increase the distance. RELEASE to set off the quake, dazing all players in its zone and in a line up to the zone.</string>
    <string name="breach_ult">EQUIP a seismic charge. FIRE to send a cascading quake through all terrain in a large line. The quake dazes and knocks up anyone caught in it.</string>
    <string name="breach_tip1">You can use your aftershock to make enemies push out of a corner.</string>
    <string name="breach_tip2">If you have a Jett on your team you can combo your flash with her dash in to make it safer for her to enter site</string>
    <string name="breach_tip3">Breach’s Ultimate can cancel a defuse so if you are low just hide somewhere near the spike and use your ultimate when you hear someone on the spike.</string>
    <string name="brim_desc">Joining from the USA, Brimstone\'\s orbital arsenal ensures his squad always has the advantage. His ability to deliver utility precisely and from a distance make him an unmatched boots-on-the-ground commander.</string>
    <string name="brim_ability1">INSTANTLY toss a stim beacon in front of Brimstone. Upon landing, the stim beacon will create a field that grants players RapidFire.</string>
    <string name="brim_ability2">EQUIP an incendiary grenade launcher. FIRE to launch a grenade that detonates as it comes to a rest on the floor, creating a lingering fire zone that damages players within the zone.</string>
    <string name="brim_ability3">EQUIP a tactical map. FIRE to set locations where Brimstone\'\s smoke clouds will land. ALTERNATE FIRE to confirm, launching long-lasting smoke clouds that block vision in the selected area.</string>
    <string name="brim_ult">EQUIP a tactical map. FIRE to launch a lingering orbital strike laser at the selected location, dealing high damage-over-time to players caught in the selected area.</string>
    <string name="brim_tip1">Always smoke where visuals are better for your teammates.</string>
    <string name="brim_tip2">Use a stim beacon whenever you can during fights, so you and your teammates have an upper hand.</string>
    <string name="brim_tip3">Learn simple lineups for post plants to ensure some rounds for your team.</string>
    <string name="cypher_desc">The Moroccan information broker, Cypher is a one-man surveillance network who keeps tabs on the enemy’s every move. No secret is safe. No maneuver goes unseen. Cypher is always watching.</string>
    <string name="cypher_ability1">EQUIP a trapwire. FIRE to place a destructible and covert tripwire at the targeted location, creating a line that spans between the placed location and the wall opposite. Enemy players who cross a tripwire will be tethered, revealed, and dazed after a short period if they do not destroy the device in time. This ability can be picked up to be REDEPLOYED.</string>
    <string name="cypher_ability2">INSTANTLY toss the cyber cage in front of Cypher. ACTIVATE to create a zone that blocks vision and plays an audio cue when enemies pass through it.</string>
    <string name="cypher_ability3">EQUIP a spycam. FIRE to place the spycam at the targeted location. RE-USE this ability to take control of the camera\'\s view. While in control of the camera, FIRE to shoot a marking dart. This dart will reveal the location of any player struck by the dart.</string>
    <string name="cypher_ult">INSTANTLY use on a dead enemy player in your crosshairs to reveal the location of all living enemy players.</string>
    <string name="cypher_tip1">Always keep your trip wires at waist level so enemies who want to flank cannot jump or crouch under them</string>
    <string name="cypher_tip2">Make sure utilize your smokes properly on both attacking and defending. When attacking use it to cover your opponents line of fire. While on defending use it to delay the push of enemies</string>
    <string name="cypher_tip3">Your camera is an essential skill for BOTH offense and defense. Always use it to watch for flanks on attacking. On defending make sure to position it on places where enemies cannot destroy it easily</string>
    <string name="jett_desc">Representing her home country of South Korea, Jett\'\s agile and evasive fighting style lets her take risks no one else can. She runs circles around every skirmish, cutting enemies before they even know what hit them.</string>
    <string name="jett_ability1">Holding the jump button while falling allows you to glide through the air.</string>
    <string name="jett_ability2">INSTANTLY throw a projectile that expands into a brief vision-blocking cloud on impact with a surface. HOLD the ability key to curve the smoke in the direction of your crosshair.</string>
    <string name="jett_ability3">INSTANTLY propel Jett high into the air.</string>
    <string name="jett_ability4">INSTANTLY propel Jett in the direction she is moving. If Jett is standing still, she will propel forward.</string>
    <string name="jett_ult">EQUIP a set of highly accurate throwing knives that recharge on killing an opponent. FIRE to throw a single knife at your target. ALTERNATE FIRE to throw all remaining daggers at your target.</string>
    <string name="jett_tip1">When using Jett’s ultimate, your shots are 100 percent accurate, so no matter how much you move, jump, and turn you will be accurate. Shoot your shot.</string>
    <string name="jett_tip2">When entering a site as Jett, you can smoke then dash in so enemies will not know where you land.</string>
    <string name="jett_tip3">When you can always revive your teammates. :)</string>
    <string name="kayo_desc">KAY/O is a machine of war built for a single purpose: neutralizing radiants. His power to suppress enemy abilities cripples his opponents\'\ capacity to fight back, securing him and his allies the ultimate edge.</string>
    <string name="kayo_ability1">EQUIP an explosive fragment. FIRE to throw. The fragment sticks to the floor and explodes multiple times, dealing near lethal damage at the center with each explosion.</string>
    <string name="kayo_ability2">EQUIP a flash grenade. FIRE to throw. The flash grenade explodes after a short fuse, blinding anyone in line of sight.</string>
    <string name="kayo_ability3">EQUIP a suppression blade. FIRE to throw. The blade sticks to the first surface it hits, winds up, and suppresses anyone in the radius of the explosion.</string>
    <string name="kayo_ult">INSTANTLY overload with polarized radianite energy that pulses from KAY/O in a massive radius. Enemies hit with pulses are suppressed for a short duration. While overloaded, KAY/O gains combat stim and can be re-stabilized if downed.</string>
    <string name="kayo_tip1">When playing Kay/o, you can right click his flash in corners to create a pop flash for the opponents to be blinded instantly.</string>
    <string name="kayo_tip2">When using Kay/o\'\s ultimate never be scared to push in because taking space with it is very important.</string>
</resources>