<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto">

                <ImageView
                    android:id="@+id/iv_valorant_ic"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop = "40dp"
                    android:src="@drawable/valorant_ic"
                    android:contentDescription="Valorant Icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/tv_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_welcome"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/iv_valorant_ic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/custom_email"
                    android:drawablePadding="12dp"
                    android:hint="@string/login_email"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/custom_lock"
                    android:drawablePadding="12dp"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:paddingStart="8dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_email" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_loginbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="40dp"
                    android:text="Login"
                    android:textSize="40sp"
                    android:textColor="@color/white"
                    android:background="@color/valorant_red1"
                    app:layout_constraintTop_toBottomOf="@+id/et_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_registerlabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No Account?"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_loginbutton"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_registerbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="60dp"
                    android:text="Register"
                    android:textSize="40sp"
                    android:textColor="@color/white"
                    android:background="@color/valorant_red2"
                    app:layout_constraintTop_toBottomOf="@id/tv_registerlabel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>
</ScrollView>
