<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/valorant_splash"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        tools:context=".RegisterActivity">

        <ImageView
            android:id="@+id/iv_valorant_ic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop = "40dp"
            android:src="@drawable/valorant_ic"
            android:contentDescription="Valorant Icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_register"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintTop_toBottomOf="@+id/iv_valorant_ic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/et_riotid"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_account"
            android:drawablePadding="12dp"
            android:focusable="true"
            android:hint="@string/reg_riotid"
            android:paddingStart="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_register" />

        <EditText
            android:id="@+id/et_tagline"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_account"
            android:drawablePadding="12dp"
            android:focusable="true"
            android:hint="Tagline: (e.g. #0000)"
            android:paddingStart="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_riotid" />

        <Spinner
            android:id="@+id/spn_rank"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/custom_input"
            app:layout_constraintTop_toBottomOf="@id/et_tagline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Spinner
            android:id="@+id/spn_region"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/custom_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spn_rank" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_lock"
            android:drawablePadding="12dp"
            android:focusable="true"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spn_region" />

        <EditText
            android:id="@+id/et_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_lock"
            android:drawablePadding="12dp"
            android:focusable="true"
            android:paddingStart="8dp"
            android:hint="Confirm Password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_registerbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:text="Register"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:background="@color/valorant_red2"
            app:layout_constraintTop_toBottomOf="@id/et_confirmpassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>